# splash

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: r10c10.csv  r10c10.h5  r127c999.exp  r127c999.h5
include/: common.hpp
include/algo/: MergeSortReduction.hpp
include/ds/: aligned_matrix.hpp  aligned_tiles.hpp  aligned_vector.hpp  buffer.hpp  char_array.hpp
include/io/: CLIParserCommon.hpp  CSVMatrixReader.hpp  CSVMatrixReader2.hpp  CustomFileReader.hpp  EXPMatrixReader.hpp  EXPMatrixReader2.hpp  EXPMatrixWriter.hpp  FileReader.hpp  FileReader2.hpp  HDF5MatrixReader.hpp  HDF5MatrixWriter.hpp  MatrixWriter.hpp  VectorWriter.hpp  error_handler.hpp  matrix_io.hpp  parameters_base.hpp
include/kernel/: dotproduct.hpp  kernel_base.hpp  random.hpp  random_generator.hpp  standard.hpp
include/patterns/: pattern.hpp
include/splash/: readme.txt
include/splash/algo/: MergeSortReduction.hpp
include/splash/ds/: aligned_matrix.hpp  aligned_tiles.hpp  aligned_vector.hpp  buffer.hpp  char_array.hpp
include/splash/io/: CLIParserCommon.hpp  CSVMatrixReader.hpp  CSVMatrixReader2.hpp  CustomFileReader.hpp  EXPMatrixReader.hpp  EXPMatrixReader2.hpp  EXPMatrixWriter.hpp  FileReader.hpp  FileReader2.hpp  HDF5MatrixReader.hpp  HDF5MatrixWriter.hpp  MatrixWriter.hpp  matrix_io.hpp  parameters_base.hpp
include/splash/kernel/: dotproduct.hpp  kernel_base.hpp  random.hpp
include/splash/patterns/: pattern.hpp
include/splash/transform/: composite_transform.hpp  rank.hpp  zscore.hpp
include/splash/utils/: benchmark.hpp  hdf5_types.hpp  math_utils.hpp  memory.hpp  (+5 more)
include/transform/: composite_transform.hpp  rank.hpp  zscore.hpp
include/utils/: hdf5_types.hpp  math_utils.hpp  memory.hpp  mpi_types.hpp  partition.hpp  report.hpp  string_utils.hpp
tests/python/: compare_corr.py  matrix_io.py
tests/scripts/: input_validation_py.sh
tests/src/: CMakeLists.txt  csv_input_test.cpp  exp_input_test.cpp  matrix_io.hpp
